got the grid on mobile version better by adjusting max width

--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ html {
     
 }
 
+
     ul {
     list-style-type: none;
 }
@@ -67,6 +68,7 @@ font-weight: lighter;
     max-width: 900px;
     
     padding: 0 1.5em;
+	padding-bottom: 45px;
 }
 
 .about-image {
