--- a/tile.css
+++ b/tile.css
@@ -12,11 +12,12 @@ html {
     gap: 20px;
     font-family: sans-serif;
     padding-top: 30px;
-    max-width: 1000px;
+    max-width: 70%;
     display: grid;
     gap: 20px;
-    margin-bottom: 5px;
+    margin-bottom: 70px;
 	transform: scale(1.3)
+
 }
 
 .tile-group * {
