get header text and video description text aligned properly

--- a/tile.css
+++ b/tile.css
@@ -15,7 +15,7 @@ html {
     max-width: 70%;
     display: grid;
     gap: 20px;
-    margin-bottom: 70px;
+    margin-bottom: 13vh;
 	transform: scale(1.3)
 
 }
