--- a/style.css
+++ b/style.css
@@ -63,10 +63,17 @@ font-weight: lighter;
     color: #777;
 }
 
+.content-section1{
+
+    font-size: 2.5em;
+    color: #777;
+    margin-top: 5vh;
+}
+
+
 .container {
     max-width: 900px;
-    
-	padding-bottom: 2%;
+	padding-bottom: 3vh;
 }
 
 .about-image {
