adding mobile formatting version

--- a/tile_mobile.css
+++ b/tile_mobile.css
@@ -22,7 +22,25 @@
 }
 }
 
+@media all and (max-width: 500px) {
+.tile-group {
+	
 
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(29.36vw, 1fr));
+    grid-auto-rows: auto;
+    gap: 6vw;
+    font-family: sans-serif;
+    padding-top: 1.1vh;
+    margin-bottom: 5vh;
+    max-width: 85vw;
+    display: grid;
+    padding-bottom: 20vh;
+   
+    
+
+}
+}
 
 .tile-group * {
     box-sizing: border-box;
@@ -37,6 +55,18 @@
     object-fit: cover;
     display: block;
  
+}
+
+@media all and (max-width: 500px) {
+.tile-image {
+    max-width: 100%;
+    height: 150px;
+    object-fit: cover;
+    display: block;
+    transform-origin: left top;
+    transform: scale(1 , 0.75)
+ 
+}
 }
 
 
