--- a/tile_mobile.css
+++ b/tile_mobile.css
@@ -1,26 +1,6 @@
 
 
-@media all and (min-width: 800px) {
-.tile-group {
-	
 
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(11.36vw, 1fr));
-    grid-auto-rows: auto;
-    gap: 1vw;
-    font-family: sans-serif;
-    padding-top: 1.1vh;
-    margin-bottom: 5vh;
-    max-width: 62vw;
-    display: grid;
-    gap: 2vw;
-    padding-bottom: 20vh;
-    transform-origin: left top;
-	transform: scale(1.4)
-    
-
-}
-}
 
 @media all and (max-width: 500px) {
 .tile-group {
@@ -29,13 +9,14 @@
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(29.36vw, 1fr));
     grid-auto-rows: auto;
-    gap: 6vw;
+    gap: 5.5vw;
     font-family: sans-serif;
     padding-top: 1.1vh;
     margin-bottom: 5vh;
     max-width: 85vw;
     display: grid;
     padding-bottom: 20vh;
+
    
     
 
@@ -59,12 +40,11 @@
 
 @media all and (max-width: 500px) {
 .tile-image {
-    max-width: 100%;
-    height: 150px;
+    max-width: 44vw;
+    height: 12vh;
     object-fit: cover;
     display: block;
     transform-origin: left top;
-    transform: scale(1 , 0.75)
  
 }
 }
