--- a/tile.css
+++ b/tile.css
@@ -34,7 +34,7 @@
 
 .tile-image {
     max-width: 100%;
-    height: 150px;
+    height: 18vh;
     object-fit: cover;
     display: block;
  
@@ -54,7 +54,10 @@ margin-bottom: 1vh;
 .tile-content {
     line-height: 1.5;
     font-size: 0.9em;
-    padding: 15px;
+    padding-left: 0.5vw;
+    padding-right: 1vw;
+    padding-top: 1vw;
+    padding-bottom: 1vw;
     overflow: hidden;
     max-width: 100%;
     max-height: 20rem;
@@ -95,7 +98,7 @@ text-decoration: underline;
     align-items: center;
     font-family: 'Noto Serif', serif;
     font-size: 1em;
-    height: 4.5rem;
+    height: auto;
     margin-bottom: 0.001rem;
     overflow: hidden;
 }
