next step is to add css rules so this switches better to mobile site when it zooms

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ html {
 
 .nav ul {
     margin: 0;
-    font-size: 1em;
+    font-size: 1.6rem;
     position: fixed;
     width: 100%;
     display: flex;
@@ -54,8 +54,8 @@ html {
     
 }
 .nav a {
-    padding-bottom: 1em;
-    padding-left: 1em;
+    padding-bottom: 1.6rem;
+    padding-left: 1.6rem;
     display: inline-block;
     text-decoration: none;
     
@@ -65,27 +65,17 @@ html {
 font-weight: lighter;
 }
 
-.main-nav {
- 
-    text-align: left;
-   
-    font-size: 1.6em;
-   
-  
 
-
-    
-}
 
 .content-section{
     margin-top: -1vh;
-    font-size: 2.5em;
+    font-size: 2.5rem;
     color: #777;
 }
 
 .content-section1{
 
-    font-size: 2.5em;
+    font-size: 2.5rem;
     color: #777;
     padding-top: var(--margin_top);
 }
@@ -99,7 +89,7 @@ font-weight: lighter;
 .about-image {
     height: auto;
     width: 40%;
-    margin: 15 px;
+    margin: 15vh;
 }
 
 /*
@@ -107,14 +97,6 @@ html {
     background-color : red
 }
 */
-
-
-
-.main-header{
-    font-size: 2.1em;
-
- 
-}
 
 
 
