--- a/tile.css
+++ b/tile.css
@@ -53,7 +53,7 @@ margin-bottom: 1vh;
 
 .tile-content {
     line-height: 1.5;
-    font-size: 0.9em;
+    font-size: 0.9rem;
     padding-left: 0.5vw;
     padding-right: 1vw;
     padding-top: 1vw;
@@ -73,13 +73,13 @@ margin-bottom: 1vh;
 
 .tile-name {
     width: 100%;
-    height: 3rem;
-    margin-bottom: 0.1rem;
+    height: auto;
+    margin-bottom: 1.3vh;
 }
 
  .tile-name a {
 font-style: italic;
-font-size: 1em;
+font-size: 0.97rem;
 font-weight: bold;
 color: #ff015d;
 font-style: italic;
@@ -97,9 +97,9 @@ text-decoration: underline;
     justify-content: space-between;
     align-items: center;
     font-family: 'Noto Serif', serif;
-    font-size: 1em;
+    font-size: 0.96rem;
     height: auto;
-    margin-bottom: 0.001rem;
+
     overflow: hidden;
 }
 .tile-links {
