--- a/style_mobile.css
+++ b/style_mobile.css
@@ -7,6 +7,7 @@
     box-sizing: border-box;
     font-family: 'Noto Serif', serif;
     color: #777
+}
   
 
     :root {
@@ -44,7 +45,7 @@ html {
     display: flex;
     justify-content: left;
     flex-direction: row;
-    margin-left: -13.4vw;
+    margin-left: -7.4vw;
     padding-top: 2vh;
 
     background-color: #ffffff;
@@ -77,7 +78,7 @@ font-weight: lighter;
 }
 
 .content-section{
-    padding-top: 5vh;
+    padding-top: 7vh;
 
     font-size: 2.0em;
     color: #777;
