adding width % max helped this issue

--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body {
   font-size: 15px;
   padding-top: var(--margin_top);
 
+
 }
 
 html {
@@ -44,13 +45,17 @@ html {
     margin: 0;
     font-size: 1.6rem;
     position: fixed;
-    width: 100%;
+    max-width: 21%;
     display: flex;
     flex-direction: column;
     margin-left: -1.8vw;
+    flex-wrap: wrap;
+    overflow-wrap: break-word;
 }
 .nav li {
-    display: inline;
+    display: block;
+    overflow-wrap: break-word;
+    width: auto;
     
 }
 .nav a {
