--- a/about.css
+++ b/about.css
@@ -1,10 +1,31 @@
+
+:root {
+    --margin_menu_col1_flex:20vw;
+  }
+  
+  .flexbox-container-top {
+    display: flex;
+    background-color: #4b209b;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+
 .flexbox-container {
     display: flex;
     background-color: #4b209b;
     flex-direction: row;
-
- 
+    flex-wrap: wrap;
+    margin-left: var(--margin_menu_col1_flex);
 }
+
+
+    .break {
+        flex-basis: 100%;
+        height: 0;
+      }
+ 
+
 
 .flexbox-item {
     
@@ -12,7 +33,7 @@
 
     margin: 1vw;
     background-color: rgb(40, 218, 24);
-    border: 3px solid black;
+    
     
 
 }
@@ -21,8 +42,21 @@
     height: auto;
     min-width: 30vw;
     max-width: 41vw;
-    margin-left: 20vw;
+    
   
 
 }
+
+.flexbox-gig-list{
+    
+    width: auto;
+
+   
+    background-color: rgb(40, 218, 24);
+   
+    margin-left: var(--margin_menu_col1_flex);
+    
+
+}
+
  
