--- a/about.css
+++ b/about.css
@@ -5,7 +5,7 @@
   
   .flexbox-container-top {
     display: flex;
-    background-color: #4b209b;
+ 
     flex-direction: row;
     flex-wrap: wrap;
 }
@@ -13,7 +13,7 @@
 
 .flexbox-container {
     display: flex;
-    background-color: #4b209b;
+ 
     flex-direction: row;
     flex-wrap: wrap;
     margin-left: var(--margin_menu_col1_flex);
@@ -27,18 +27,21 @@
  
 
 
+.ul{
+    margin-top: 0vh;
+    padding-top: 0vh;
+    font-size: 50rem;
+}
+
 .flexbox-item {
     
     width: auto;
-
-    margin: 1vw;
-    background-color: rgb(40, 218, 24);
-    
-    
-
-}
+   
+  
+    }
 
 .flexbox-bio-photo {
+    margin-top: 1.4vh;
     height: auto;
     min-width: 30vw;
     max-width: 41vw;
@@ -50,11 +53,14 @@
 .flexbox-gig-list{
     
     width: auto;
-
-   
+    align-items: flex-start;
+    align-content: flex-start;
+    margin: 0;
+    padding: 0;
+    justify-content: left;   
     background-color: rgb(40, 218, 24);
    
-    margin-left: var(--margin_menu_col1_flex);
+ 
     
 
 }
