--- a/about.css
+++ b/about.css
@@ -38,16 +38,19 @@
     
     width: 0 auto;
     padding: 0 0 ;
-   
-   
+    margin: 0 0;
+    
   
     }
 
 .flexbox-bio-photo {
-    margin-top: 1.4vh;
+  
     height: auto;
     min-width: 30vw;
     max-width: 41vw;
+    align-items: flex-start;
+    align-content: flex-start;
+    margin-top: 1vh;
     
   
 
