--- a/about.css
+++ b/about.css
@@ -46,14 +46,16 @@
 
 .flexbox-item-text {
 
-    min-height: 15vh;
+    min-height: 40vh;
     padding: 0 0 ;
     margin: 0 0;
     word-wrap: break-word ;
     display: inline-block;
-    background-color: blue;
+   
     flex-grow: 1;
-    max-width: 30vw;
+    max-width: 33vw;
+    font-size: 1.8rem;
+    margin-left: 3vw;
     
     
     
