--- a/about.css
+++ b/about.css
@@ -80,26 +80,14 @@
     word-wrap: break-word;
 }
 
-.flexbox-gig-list{
-    
-    width: auto;
-    align-items: flex-start;
-    align-content: flex-start;
-    margin: 0;
-    padding: 0;
-    justify-content: left;   
-   
-   
- 
-    
 
-}
 
 
  
 .flexbox-item-ev {
     
     width: 0 auto;
+    max-width: 33vw;
     padding: 0 0 ;
     margin: 0 0;
     font-size: 1.3rem;
