adjusted responsive width on demo page on mobile version

--- a/tile.css
+++ b/tile.css
@@ -1,6 +1,5 @@
 
 
-@media all and (min-width: 800px) {
 .tile-group {
 	
 
@@ -20,6 +19,39 @@
     
     
 
+}
+
+
+@media all and (max-width: 1200px) {
+    .tile-group{
+        background-color: rgba(172, 172, 197, 0.37);
+        padding-bottom: 50vh;
+    }
+}
+
+@media all and (max-width: 1005px) {
+    .tile-group{
+        background-color: rgba(25, 25, 190, 0.37);
+        padding-bottom: 50vh;
+        grid-template-columns: repeat(auto-fill, minmax(15.36vw, 1fr));
+    }
+}
+
+@media all and (max-width: 905px) {
+    .tile-group{
+        background-color: rgba(25, 25, 190, 0.37);
+        padding-bottom: 50vh;
+        grid-template-columns: repeat(auto-fill, minmax(28.36vw, 1fr));
+        gap: 1vw;
+    }
+}
+@media all and (max-width: 805px) {
+    .tile-group{
+        background-color: rgba(25, 25, 190, 0.37);
+        padding-bottom: 50vh;
+        grid-template-columns: repeat(auto-fill, minmax(30.36vw, 1fr));
+        gap: 1vw;
+    }
 }
 
 
@@ -50,6 +82,7 @@
 
 .tile-single{
 margin-bottom: 1vh;
+
 }
 
 .tile-content {
@@ -62,6 +95,7 @@ margin-bottom: 1vh;
     overflow: hidden;
     max-width: 100%;
     max-height: 20rem;
+    
 }
 
 .tile-content > p:first-of-type {
@@ -71,6 +105,14 @@ margin-bottom: 1vh;
 .tile-content > p:last-of-type {
     margin-bottom: 0;
 }
+
+@media all and (max-width: 1100px) {
+    .tile-content {
+        overflow: visible;
+    }
+
+}
+
 
 .tile-name {
     width: 100%;
@@ -85,6 +127,7 @@ font-weight: bold;
 color: #ff015d;
 font-style: italic;
 text-decoration: underline;
+
     
 }
 
@@ -101,12 +144,15 @@ text-decoration: underline;
     font-size: 0.96rem;
     height: auto;
 
-    overflow: hidden;
+   
 }
+
+
 .tile-links {
     
     display: block;
     justify-content: space-between;
+   
 }
 
 .tile-links a:hover {
@@ -122,4 +168,43 @@ text-decoration: underline;
     padding: 0vw 18.9vw;
 
   }
-}
+
+  @media all and (max-width: 950px) {
+
+    .flex-container {
+
+        padding: 0vw 25.2vw;
+
+    }
+
+  }
+
+  @media all and (max-width: 830px) {
+
+    .flex-container {
+
+        padding: 0vw 30.2vw;
+
+    }
+
+  }
+
+  @media all and (max-width: 630px) {
+
+    .flex-container {
+
+        padding: 0vw 40.2vw;
+
+    }
+
+  }
+
+  @media all and (max-width: 530px) {
+
+    .flex-container {
+
+        padding: 0vw 45.2vw;
+
+    }
+
+  }
