adjusted responsive width of event promotions on demo page on mobile version

--- a/tile.css
+++ b/tile.css
@@ -32,20 +32,29 @@
 @media all and (max-width: 1005px) {
     .tile-group{
         background-color: rgba(25, 25, 190, 0.37);
-        padding-bottom: 50vh;
+        padding-bottom: 55vh;
         grid-template-columns: repeat(auto-fill, minmax(15.36vw, 1fr));
     }
 }
 
 @media all and (max-width: 905px) {
     .tile-group{
-        background-color: rgba(25, 25, 190, 0.37);
-        padding-bottom: 50vh;
+        background-color: rgba(132, 185, 33, 0.37);
+        padding-bottom: 100vh;
         grid-template-columns: repeat(auto-fill, minmax(28.36vw, 1fr));
         gap: 1vw;
     }
 }
 @media all and (max-width: 805px) {
+    .tile-group{
+        background-color: rgba(25, 25, 190, 0.37);
+        padding-bottom: 50vh;
+        grid-template-columns: repeat(auto-fill, minmax(30.36vw, 1fr));
+        gap: 1vw;
+    }
+}
+
+@media all and (max-width: 630px) {
     .tile-group{
         background-color: rgba(25, 25, 190, 0.37);
         padding-bottom: 50vh;
