--- a/style.css
+++ b/style.css
@@ -89,6 +89,143 @@ font-weight: lighter;
    
 }
 
+@media all and (max-height: 570px) {
+    .content-section1{
+        font-size: 2.5rem;
+        color: #777;
+        padding-top: var(--margin_top);
+        margin-top: 20vh;
+    }
+}
+
+@media all and (max-height: 480px) {
+    .content-section1{
+        font-size: 2.5rem;
+        color: #777;
+        padding-top: var(--margin_top);
+        margin-top: 30vh;
+    }
+}
+
+@media all and (max-height: 410px) {
+    .content-section1{
+        font-size: 2.5rem;
+        color: #777;
+        padding-top: var(--margin_top);
+        margin-top: 45vh;
+    }
+}
+
+@media all and (max-height: 380px) {
+    .content-section1{
+        font-size: 2.5rem;
+        color: #777;
+        padding-top: var(--margin_top);
+        margin-top: 52vh;
+    }
+}
+
+@media all and (max-height: 360px) {
+    .content-section1{
+        font-size: 2.5rem;
+        color: #777;
+        padding-top: var(--margin_top);
+        margin-top: 70vh;
+    }
+}
+
+@media all and (max-height: 340px) {
+    .content-section1{
+        font-size: 2.5rem;
+        color: #777;
+        padding-top: var(--margin_top);
+        margin-top: 80vh;
+    }
+}
+
+@media all and (max-height: 320px) {
+    .content-section1{
+        font-size: 2.5rem;
+        color: #777;
+        padding-top: var(--margin_top);
+        margin-top: 90vh;
+    }
+}
+
+@media all and (max-height: 300px) {
+    .content-section1{
+        font-size: 2.5rem;
+        color: #777;
+        padding-top: var(--margin_top);
+        margin-top: 105vh;
+    }
+}
+
+@media all and (max-height: 260px) {
+    .content-section1{
+        font-size: 2.5rem;
+        color: #777;
+        padding-top: var(--margin_top);
+        margin-top: 122vh;
+    }
+}
+
+@media all and (max-height: 240px) {
+    .content-section1{
+        font-size: 2.5rem;
+        color: #777;
+        padding-top: var(--margin_top);
+        margin-top: 150vh;
+    }
+}
+
+@media all and (max-height: 230px) {
+    .content-section1{
+        font-size: 2.5rem;
+        color: #777;
+        padding-top: var(--margin_top);
+        margin-top: 200vh;
+    }
+}
+
+@media all and (max-height: 200px) {
+    .content-section1{
+        font-size: 2.5rem;
+        color: #777;
+        padding-top: var(--margin_top);
+        margin-top: 270vh;
+    }
+}
+
+@media all and (max-height: 180px) {
+    .content-section1{
+        font-size: 2.5rem;
+        color: #777;
+        padding-top: var(--margin_top);
+        margin-top: 350vh;
+    }
+}
+
+@media all and (max-height: 150px) {
+    .content-section1{
+        font-size: 2.5rem;
+        color: #777;
+        padding-top: var(--margin_top);
+        margin-top: 450vh;
+    }
+}
+
+@media all and (max-height: 120px) {
+    .content-section1{
+        font-size: 2.5rem;
+        color: #777;
+        padding-top: var(--margin_top);
+        margin-top: 2050vh;
+    }
+}
+
+
+
 
 .container {
     max-width: 70vw;
