--- a/style.css
+++ b/style.css
@@ -224,6 +224,62 @@ font-weight: lighter;
     }
 }
 
+@media all and (max-width: 499px), and (max-height: 256px) {
+    .content-section1{
+        font-size: 2.5rem;
+        color: #777;
+        padding-top: var(--margin_top);
+        margin-top: 180vh;
+    }
+}
+
+@media all and (max-width: 451px), and (max-height: 203px) {
+    .content-section1{
+        font-size: 2.5rem;
+        color: #777;
+        padding-top: var(--margin_top);
+        margin-top: 220vh;
+    }
+}
+
+@media all and (max-width: 451px), and (max-height: 179px) {
+    .content-section1{
+        font-size: 2.5rem;
+        color: #777;
+        padding-top: var(--margin_top);
+        margin-top: 550vh;
+    }
+}
+
+@media all and (max-width: 451px), and (max-height: 179px) {
+    .content-section1{
+        font-size: 2.5rem;
+        color: #777;
+        padding-top: var(--margin_top);
+        margin-top: 550vh;
+    }
+}
+
+@media all and (max-width: 501px) {
+    .content-section1{
+        font-size: 2.5rem;
+        color: #777;
+        padding-top: var(--margin_top);
+        margin-top: 90vh;
+    }
+}
+
+@media all and (max-width: 499px), and (max-height: 615px) {
+    .content-section1{
+        font-size: 2.5rem;
+        color: #777;
+        padding-top: var(--margin_top);
+        margin-top: 130vh;
+    }
+}
+
+
+
 
 
 
