--- a/style.css
+++ b/style.css
@@ -31,6 +31,13 @@ body {
 
 }
 
+@media all and (max-height: 200px) {
+
+    body {
+        padding-top: 0vh;
+    }
+}
+
 html {
     background:#ffffff
 
@@ -79,6 +86,41 @@ html {
     }
 
 }
+
+@media all and (max-width: 410px), and (max-height: 185px) {
+
+    .nav ul {
+        margin-left: -6vw;
+    }
+}
+
+@media all and (max-width: 365px), and (max-height: 116px) {
+
+    .nav ul {
+        margin-left: -12vw;
+    }
+
+}
+
+@media all and (max-width: 297px), and (max-height: 134px) {
+
+    .nav ul {
+        margin-left: -8vw;
+        transform-origin: left top;
+        transform: scale(0.5);
+        padding-bottom: -1vh;
+
+    }
+
+    .nav a {
+        padding-bottom: 0rem;
+    }
+
+}
+
+
+
+
 
 
 .nav li {
