--- a/about.css
+++ b/about.css
@@ -2,6 +2,17 @@
 :root {
     --margin_menu_col1_flex:22vw;
   }
+
+  .overflow_box_hide{
+    background-color:rgb(0, 0, 255);
+    width: 100%;
+    height: 20vh;
+    position: fixed;
+    top: 0;
+    z-index: 5;
+   
+
+  }
   
   .flexbox-container-top {
     display: flex;
@@ -109,7 +120,7 @@
         .flexbox-item-text{
     
 
-            margin-top: 65vh;
+            margin-top: 59vh;
             margin-right: 50vw;
        
          }
@@ -117,8 +128,17 @@
          .flexbox-bio-photo{
             display: none;
          }
+
+         .flexbox-container-top {
+            position: relative;
+            z-index: 2;
+
+            display: flex;
+         
+            flex-direction: row;
+
     }
-    
+}
 
     
 
