--- a/about.css
+++ b/about.css
@@ -4,12 +4,7 @@
   }
 
   .overflow_box_hide{
-    background-color:rgb(0, 0, 255);
-    width: 100%;
-    height: 20vh;
-    position: fixed;
-    top: 0;
-    z-index: 5;
+    display: hide;
    
 
   }
@@ -131,13 +126,25 @@
 
          .flexbox-container-top {
             position: relative;
-            z-index: 2;
+            z-index: 1;
 
             display: flex;
          
             flex-direction: row;
 
     }
+
+    
+  .overflow_box_hide{
+    background-color:#ffffff;
+    width: 100%;
+    height: 20vh;
+    position: fixed;
+    top: 0;
+    z-index: 2;
+   
+
+  }
 }
 
     
