--- a/about.css
+++ b/about.css
@@ -18,7 +18,6 @@
 
 
 
-
 .flexbox-container {
     display: flex;
  
@@ -51,9 +50,10 @@
     width: 0 auto;
     padding: 0 0 ;
     margin: 0 0;
+  
 
    
-    
+
   
     }
 
@@ -72,12 +72,23 @@
     max-width: 33vw;
     font-size: 1.8rem;
     margin-left: 3vw;
+    overflow-x: clip;
 
  
     
     
     
     }
+    @media all and (min-width: 660px){
+        body{ overflow-x: hidden; }
+    }
+
+
+
+  
+
+ 
+ 
 
     @media all and (max-width: 876px), and (max-height: 476px) {
 
@@ -171,6 +182,35 @@
   }
 }
 
+@media all and (max-width: 767px) {
+    
+    .main-nav{
+        margin-right: 5vw;
+    }
+
+}
+
+@media all and (max-width: 598px) {
+    
+    .main-nav{
+        margin-right: 12vw;
+    }
+
+}
+
+@media all and (max-width: 342px) {
+    
+    .main-nav{
+        margin-right: 20vw;
+    }
+
+    .main-nav{
+        margin-left: 20vw;
+    }
+
+}
+
+
     
 
 
@@ -183,11 +223,15 @@
     align-content: flex-start;
     margin-top: 1vh;
     
-  
-      
- 
-
 }
+
+@media all and (max-width: 767px) {
+
+    .flexbox-bio-photo{
+        display: none;
+    }
+}
+      
 
 .p {
 
