--- a/style_mobile.css
+++ b/style_mobile.css
@@ -38,8 +38,13 @@ html {
     list-style-type: none;
 }
 
+.main-nav{
+    width: 100%;
+    justify-content: center;
+    background-color: #ffffff;
+}
 .nav ul {
-    font-size: 1em;
+    font-size: 1.3rem;
     position: fixed;
     top: -1.3vh;
     display: flex;
@@ -47,15 +52,16 @@ html {
     flex-direction: row;
     margin-left: -7.4vw;
     padding-top: 2vh;
-    
-
-    width: 160%;
+    flex-wrap: nowrap;
+    gap: 10vw;
 
     
 }
+
 .nav li {
     display: inline;
-    width: 100%;
+
+    flex: 1 1 auto;
     
 }
 .nav a {
@@ -79,14 +85,14 @@ font-weight: lighter;
 }
 
 .content-section{
-    padding-top: 7vh;
+    padding-top: 10vh;
 
     font-size: 2.0em;
     color: #777;
 }
 
 .content-section1{
-    padding-top: 5vh;
+    padding-top: 10vh;
     font-size: 2.0em;
     color: #777;
 }
