--- a/style.css
+++ b/style.css
@@ -63,6 +63,78 @@ html {
    
 }
 
+
+/* WEB VERSION */
+
+@media all and (min-width: 500px), and (min-height: 901px){
+    .overflow_box_hide{
+
+        display:none;
+
+    }
+
+    .content-section{
+        margin-top: -1vh;
+        font-size: 2.5rem;
+        color: #777;
+    }
+    
+    .content-section1{
+    
+        font-size: 2.5rem;
+        color: #777;
+        padding-top: var(--margin_top);
+        margin-top: 10vh;
+       
+    }
+}
+
+/* MOBILE VERSION */
+
+@media all and (max-width: 499px), and (max-height: 900px) {
+    
+    .nav ul {
+        font-size: 1.3rem;
+        position: fixed;
+        top: -1.3vh;
+        display: flex;
+        justify-content: left;
+        flex-direction: row;
+        margin-left: -7.4vw;
+        padding-top: 2vh;
+        flex-wrap: nowrap;
+        gap: 10vw;
+        z-index: 3;
+        
+    }
+
+    .content-section{
+        margin-top: -5vh;
+        font-size: 2.5rem;
+        color: #777;
+    }
+    
+    .content-section1{
+    
+        font-size: 2.5rem;
+        color: #777;
+        padding-top: var(--margin_top);
+        margin-top: 10vh;
+       
+    }
+}
+
+.overflow_box_hide{
+    background-color:#ffffff;
+    width: 100%;
+    height: 10vh;
+    position: fixed;
+    top: 0;
+    z-index: 2;
+   
+
+  }
+
 @media all and (max-width: 518px), and (max-height: 542px) {
     .nav ul {
     
@@ -163,20 +235,7 @@ font-weight: lighter;
 
 
 
-.content-section{
-    margin-top: -1vh;
-    font-size: 2.5rem;
-    color: #777;
-}
 
-.content-section1{
-
-    font-size: 2.5rem;
-    color: #777;
-    padding-top: var(--margin_top);
-    margin-top: 10vh;
-   
-}
 
 @media all and (max-height: 570px) {
     .content-section1{
