--- a/tile.css
+++ b/tile.css
@@ -1,65 +1,107 @@
 
 
-.tile-group {
-	
 
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(11.36vw, 1fr));
-    grid-auto-rows: auto;
-    gap: 1vw;
-    font-family: sans-serif;
-    margin-bottom: 5vh;
-    margin-left: 0.1vw;
-    max-width: 58vw;
-    display: grid;
-    gap: 2vw;
-    padding-bottom: 40vh;
-    transform-origin: left top;
-	transform: scale(1.4)
-    
+/* Mobile VERSION */
+
+
+@media all and (max-width: 499px),
+and (max-height: 900px) {
+
+    .tile-group {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(30.36vw, 1fr));
+        grid-auto-rows: auto;
+        gap: 1vw;
+        font-family: sans-serif;
+        margin-bottom: 5vh;
+        margin-left: 0.1vw;
+        max-width: 58vw;
+        display: grid;
+        gap: 2vw;
+        padding-bottom: 0vh;
+        transform-origin: left top;
+        transform: scale(1.4)
+    }
+
+    .flex-container {
+        display: flex;
+        flex-direction: column;
+        flex-direction: flex-start;
+        margin: 0 auto;
+        padding: 0vw 18.9vw;
+
+    }
+
     
 
 }
 
+/* WEB VERSION */
+@media all and (min-width: 500px),
+and (min-height: 901px) {
+
+    .tile-group {
+
+
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(11.36vw, 1fr));
+        grid-auto-rows: auto;
+        gap: 1vw;
+        font-family: sans-serif;
+        margin-bottom: 5vh;
+        margin-left: 0.1vw;
+        max-width: 58vw;
+        display: grid;
+        gap: 2vw;
+        padding-bottom: 40vh;
+        transform-origin: left top;
+        transform: scale(1.4)
+    }
+
+    .flex-container {
+        display: flex;
+        flex-direction: column;
+        flex-direction: flex-start;
+        margin: 0 auto;
+        padding: 0vw 18.9vw;
+
+    }
+}
 
 @media all and (max-width: 1200px) {
-    .tile-group{
+    .tile-group {
         padding-bottom: 50vh;
     }
 }
 
 @media all and (max-width: 1005px) {
-    .tile-group{
+    .tile-group {
         padding-bottom: 55vh;
         grid-template-columns: repeat(auto-fill, minmax(15.36vw, 1fr));
     }
 }
 
 @media all and (max-width: 905px) {
-    .tile-group{
+    .tile-group {
         padding-bottom: 100vh;
         grid-template-columns: repeat(auto-fill, minmax(28.36vw, 1fr));
         gap: 1vw;
     }
 }
+
 @media all and (max-width: 805px) {
-    .tile-group{
+    .tile-group {
         padding-bottom: 103vh;
         grid-template-columns: repeat(auto-fill, minmax(30.36vw, 1fr));
         gap: 1vw;
     }
 }
 
-@media all and (max-width: 630px) {
-    .tile-group{
-        padding-bottom: 120vh;
-        grid-template-columns: repeat(auto-fill, minmax(30.36vw, 1fr));
-        gap: 1vw;
-    }
 
 
-    
-}
+
+
+
 
 
 
@@ -68,7 +110,7 @@
 .tile-group * {
     box-sizing: border-box;
 
-    
+
 }
 
 
@@ -78,7 +120,7 @@
     height: 18vh;
     object-fit: cover;
     display: block;
- 
+
 }
 
 
@@ -88,8 +130,8 @@
 
 }
 
-.tile-single{
-margin-bottom: 1vh;
+.tile-single {
+    margin-bottom: 1vh;
 
 }
 
@@ -103,14 +145,14 @@ margin-bottom: 1vh;
     overflow: hidden;
     max-width: 100%;
     max-height: 20rem;
-    
+
 }
 
-.tile-content > p:first-of-type {
+.tile-content>p:first-of-type {
     margin-top: 0;
 }
 
-.tile-content > p:last-of-type {
+.tile-content>p:last-of-type {
     margin-bottom: 0;
 }
 
@@ -128,15 +170,15 @@ margin-bottom: 1vh;
     margin-bottom: 1.3vh;
 }
 
- .tile-name a {
-font-style: italic;
-font-size: 0.97rem;
-font-weight: bold;
-color: #ff015d;
-font-style: italic;
-text-decoration: underline;
+.tile-name a {
+    font-style: italic;
+    font-size: 0.97rem;
+    font-weight: bold;
+    color: #ff015d;
+    font-style: italic;
+    text-decoration: underline;
 
-    
+
 }
 
 .tile-name a:hover {
@@ -152,16 +194,16 @@ text-decoration: underline;
     font-size: 0.96rem;
     height: auto;
 
-   
+
 }
 
 
 .tile-links {
-    
+
     display: block;
     justify-content: space-between;
 
-   
+
 }
 
 .tile-links a:hover {
@@ -169,16 +211,9 @@ text-decoration: underline;
     filter: brightness(150%);
 }
 
-.flex-container {
-    display: flex;
-    flex-direction: column;
-    flex-direction: flex-start;
-    margin: 0 auto;
-    padding: 0vw 18.9vw;
 
-  }
 
-  @media all and (max-width: 950px) {
+@media all and (max-width: 950px) {
 
     .flex-container {
 
@@ -186,9 +221,9 @@ text-decoration: underline;
 
     }
 
-  }
+}
 
-  @media all and (max-width: 830px) {
+@media all and (max-width: 830px) {
 
     .flex-container {
 
@@ -196,9 +231,9 @@ text-decoration: underline;
 
     }
 
-  }
+}
 
-  @media all and (max-width: 630px) {
+@media all and (max-width: 630px) {
 
     .flex-container {
 
@@ -206,14 +241,14 @@ text-decoration: underline;
 
     }
 
-  }
+}
 
-  @media all and (max-width: 530px) {
+@media all and (max-width: 530px) {
 
     .flex-container {
 
-        padding: 0vw 45.2vw;
+        padding: 0vw 12.2vw;
 
     }
 
-  }
+}
