redid some work to avoid error of image tiles getting small

--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ html {
 
 /* MOBILE VERSION */
 
-@media all and (max-width: 499px), and (max-height: 900px) {
+@media screen and (width <= 499px) and (height <= 950px) {
     
     .nav ul {
         font-size: 1.3rem;
@@ -103,7 +103,7 @@ html {
 
 /* WEB VERSION */
 
-@media all and (min-width: 500px), and (min-height: 901px){
+@media screen and (width >= 500px) and (height >= 501px){
 
     .nav ul {
     margin: 0;
