--- a/tile.css
+++ b/tile.css
@@ -4,8 +4,7 @@
 /* Mobile VERSION */
 
 
-@media all and (max-width: 499px),
-and (max-height: 900px) {
+@media screen and (width <= 499px) and (height <= 950px) {
 
     .tile-group {
         display: grid;
@@ -53,12 +52,9 @@ and (max-height: 900px) {
 }
 
 /* WEB VERSION */
-@media all and (min-width: 500px),
-and (min-height: 901px) {
+@media screen and (width >= 500px) and (height >= 501px) {
 
     .tile-group {
-
-
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(11.36vw, 1fr));
         grid-auto-rows: auto;
@@ -88,7 +84,6 @@ and (min-height: 901px) {
     
     
     }
-    
     
     
     .tile-image {
@@ -202,42 +197,3 @@ and (min-height: 901px) {
 
 
 
-@media all and (max-width: 950px) {
-
-    .flex-container {
-
-        padding: 0vw 25.2vw;
-
-    }
-
-}
-
-@media all and (max-width: 830px) {
-
-    .flex-container {
-
-        padding: 0vw 30.2vw;
-
-    }
-
-}
-
-@media all and (max-width: 630px) {
-
-    .flex-container {
-
-        padding: 0vw 40.2vw;
-
-    }
-
-}
-
-@media all and (max-width: 530px) {
-
-    .flex-container {
-
-        padding: 0vw 12.2vw;
-
-    }
-
-}
