--- a/style.css
+++ b/style.css
@@ -49,11 +49,18 @@ html {
     list-style-type: none;
 }
 
+.link_event_promo{
+    width: 0.1vw;
+    height: 1vh;
+    margin-top: 1vh;
+}
 
 
 /* MOBILE VERSION */
 
 @media screen and (width <= 499px) and (height <= 950px) {
+
+    
     
     .nav ul {
         font-size: 1.3rem;
@@ -78,11 +85,10 @@ html {
     }
     
     .content-section1{
-    
         font-size: 2.5rem;
         color: #777;
-        padding-top: var(--margin_top);
-        margin-top: 1vh;
+        padding-top: 3vh;
+        margin-top: 5vh;
        
     }
 
@@ -137,7 +143,7 @@ html {
         font-size: 2.5rem;
         color: #777;
         padding-top: var(--margin_top);
-        margin-top: 10vh;
+        margin-top: 1vh;
        
     }
 }
@@ -239,199 +245,6 @@ html {
 
 .nav a:hover {
 font-weight: lighter;
-}
-
-
-
-
-
-@media all and (max-height: 570px) {
-    .content-section1{
-        font-size: 2.5rem;
-        color: #777;
-        padding-top: var(--margin_top);
-        margin-top: 20vh;
-    }
-}
-
-@media all and (max-height: 480px) {
-    .content-section1{
-        font-size: 2.5rem;
-        color: #777;
-        padding-top: var(--margin_top);
-        margin-top: 30vh;
-    }
-}
-
-@media all and (max-height: 410px) {
-    .content-section1{
-        font-size: 2.5rem;
-        color: #777;
-        padding-top: var(--margin_top);
-        margin-top: 45vh;
-    }
-}
-
-@media all and (max-height: 380px) {
-    .content-section1{
-        font-size: 2.5rem;
-        color: #777;
-        padding-top: var(--margin_top);
-        margin-top: 52vh;
-    }
-}
-
-@media all and (max-height: 360px) {
-    .content-section1{
-        font-size: 2.5rem;
-        color: #777;
-        padding-top: var(--margin_top);
-        margin-top: 70vh;
-    }
-}
-
-@media all and (max-height: 340px) {
-    .content-section1{
-        font-size: 2.5rem;
-        color: #777;
-        padding-top: var(--margin_top);
-        margin-top: 80vh;
-    }
-}
-
-@media all and (max-height: 320px) {
-    .content-section1{
-        font-size: 2.5rem;
-        color: #777;
-        padding-top: var(--margin_top);
-        margin-top: 90vh;
-    }
-}
-
-@media all and (max-height: 300px) {
-    .content-section1{
-        font-size: 2.5rem;
-        color: #777;
-        padding-top: var(--margin_top);
-        margin-top: 105vh;
-    }
-}
-
-@media all and (max-height: 260px) {
-    .content-section1{
-        font-size: 2.5rem;
-        color: #777;
-        padding-top: var(--margin_top);
-        margin-top: 122vh;
-    }
-}
-
-@media all and (max-height: 240px) {
-    .content-section1{
-        font-size: 2.5rem;
-        color: #777;
-        padding-top: var(--margin_top);
-        margin-top: 150vh;
-    }
-}
-
-@media all and (max-height: 230px) {
-    .content-section1{
-        font-size: 2.5rem;
-        color: #777;
-        padding-top: var(--margin_top);
-        margin-top: 200vh;
-    }
-}
-
-@media all and (max-height: 200px) {
-    .content-section1{
-        font-size: 2.5rem;
-        color: #777;
-        padding-top: var(--margin_top);
-        margin-top: 270vh;
-    }
-}
-
-@media all and (max-height: 180px) {
-    .content-section1{
-        font-size: 2.5rem;
-        color: #777;
-        padding-top: var(--margin_top);
-        margin-top: 350vh;
-    }
-}
-
-@media all and (max-height: 150px) {
-    .content-section1{
-        font-size: 2.5rem;
-        color: #777;
-        padding-top: var(--margin_top);
-        margin-top: 450vh;
-    }
-}
-
-@media all and (max-height: 120px) {
-    .content-section1{
-        font-size: 2.5rem;
-        color: #777;
-        padding-top: var(--margin_top);
-        margin-top: 2050vh;
-    }
-}
-
-@media all and (max-width: 499px), and (max-height: 256px) {
-    .content-section1{
-        font-size: 2.5rem;
-        color: #777;
-        padding-top: var(--margin_top);
-        margin-top: 180vh;
-    }
-}
-
-@media all and (max-width: 451px), and (max-height: 203px) {
-    .content-section1{
-        font-size: 2.5rem;
-        color: #777;
-        padding-top: var(--margin_top);
-        margin-top: 220vh;
-    }
-}
-
-@media all and (max-width: 451px), and (max-height: 179px) {
-    .content-section1{
-        font-size: 2.5rem;
-        color: #777;
-        padding-top: var(--margin_top);
-        margin-top: 550vh;
-    }
-}
-
-@media all and (max-width: 451px), and (max-height: 179px) {
-    .content-section1{
-        font-size: 2.5rem;
-        color: #777;
-        padding-top: var(--margin_top);
-        margin-top: 550vh;
-    }
-}
-
-@media all and (max-width: 501px) {
-    .content-section1{
-        font-size: 2.5rem;
-        color: #777;
-        padding-top: var(--margin_top);
-        margin-top: 90vh;
-    }
-}
-
-@media all and (max-width: 499px), and (max-height: 615px) {
-    .content-section1{
-        font-size: 2.5rem;
-        color: #777;
-        padding-top: var(--margin_top);
-        margin-top: 130vh;
-    }
 }
 
 
