--- a/style.css
+++ b/style.css
@@ -147,54 +147,51 @@ html {
        
     }
 }
+/* WEB VERSION  WINDOW NARROW FROM RIGHT to LEFT */
+@media screen and (600px < width <= 1240px) and (height > 600px){
 
-
-@media all and (max-width: 518px), and (max-height: 542px) {
     .nav ul {
+    margin: 0;
+    font-size: 1.6rem;
+    position: fixed;
+    max-width: 21%;
+    display: flex;
+    flex-direction: column;
+    margin-left: -1.8vw;
+    flex-wrap: wrap;
+    overflow-wrap: break-word;
+
+   
+}
+
+
+    .overflow_box_hide{
+
+        display:none;
+
+    }
+
+    .content-section{
+        margin-top: -1vh;
+        font-size: 2.5rem;
+        color: #777;
+    }
     
-
+    .content-section1{
+    
+        font-size: 2.5rem;
+        color: #777;
+        padding-top: var(--margin_top);
+        margin-top: 1vh;
+       
     }
 }
 
-@media all and (min-width: 4000px) {
-
-    .nav ul {
-        margin-left: -0.1vw;
-    }
-
-}
 
 
-@media all and (min-width: 4000px) {
 
-    .nav ul {
-        margin-left: -0.1vw;
-    }
 
-}
 
-@media all and (min-width: 2730px) {
-
-    .nav ul {
-        margin-left: -0.5vw;
-    }
-
-}
-
-@media all and (max-width: 410px), and (max-height: 185px) {
-
-    .nav ul {
-        margin-left: -6vw;
-    }
-}
-
-@media all and (max-width: 365px), and (max-height: 116px) {
-
-    .nav ul {
-        margin-left: -12vw;
-    }
-
-}
 
 @media all and (max-width: 297px), and (max-height: 134px) {
 
