--- a/tile.css
+++ b/tile.css
@@ -19,7 +19,7 @@
         gap: 2vw;
         padding-bottom: 50vh;
         transform-origin: left top;
-        transform: scale(1.4)
+        transform: scale(1.4);
     }
 
     .flex-container {
@@ -27,7 +27,7 @@
         flex-direction: column;
         flex-direction: flex-start;
         margin: 0 auto;
-        padding: 0vw 18.9vw;
+        padding: 0vw 9.9vw;
 
     }
 
@@ -62,12 +62,13 @@
         font-family: sans-serif;
         margin-bottom: 5vh;
         margin-left: 0.1vw;
-        max-width: 58vw;
+        max-width: 56vw;
         display: grid;
         gap: 2vw;
         padding-bottom: 48vh;
         transform-origin: left top;
-        transform: scale(1.4)
+        transform: scale(1.4);
+        
     }
 
     .flex-container {
@@ -75,7 +76,7 @@
         flex-direction: column;
         flex-direction: flex-start;
         margin: 0 auto;
-        padding: 0vw 18.9vw;
+        padding: 0vw 19.2vw;
 
     }
 
@@ -95,7 +96,52 @@
     }
 }
 
+/* WEB VERSION  WINDOW NARROW FROM RIGHT to LEFT */
+@media screen and (600px < width <= 1240px) and (height > 600px) {
 
+    .tile-group {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(12.36vw, 1fr));
+        grid-auto-rows: auto;
+        gap: 1vw;
+        font-family: sans-serif;
+        margin-bottom: 50vh;
+        margin-left: 0.1vw;
+        max-width: 50vw;
+        display: grid;
+        gap: 2vw;
+        padding-bottom: 48vh;
+        transform-origin: left top;
+        transform: scale(1.4);
+        background-color: rgb(0, 68, 216);
+    
+    }
+
+    .flex-container {
+        display: flex;
+        flex-direction: column;
+        flex-direction: flex-start;
+        margin: 0 auto;
+        padding: 0vw 19.9vw;
+
+    }
+
+    .tile-group * {
+        box-sizing: border-box;
+    
+    
+    }
+    
+    
+    .tile-image {
+        max-width: 100%;
+        height: 18vh;
+        object-fit: cover;
+        display: block;
+    
+    }
+
+}
 
 
 
