--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ html {
        
     }
 }
-/* WEB VERSION  WINDOW NARROW FROM RIGHT to LEFT */
+/* WEB VERSION  WINDOW NARROW FROM RIGHT to LEFT 1*/
 @media screen and (600px < width <= 1240px) and (height > 600px){
 
     .nav ul {
@@ -188,11 +188,52 @@ html {
 }
 
 
+/* WEB VERSION  WINDOW NARROW FROM RIGHT to LEFT 2 */
+@media screen and (600px < width <= 967px) and (height > 600px) {
+
+    .nav ul {
+        margin: 0;
+        font-size: 1.6rem;
+        position: fixed;
+        max-width: 21%;
+        display: flex;
+        flex-direction: column;
+        margin-left: -1.8vw;
+        flex-wrap: wrap;
+        overflow-wrap: break-word;
+    
+       
+    }
+    
+    
+        .overflow_box_hide{
+    
+            display:none;
+    
+        }
+    
+        .content-section{
+            margin-top: -1vh;
+            font-size: 2.5rem;
+            color: #777;
+        }
+        
+        .content-section1{
+        
+            font-size: 2.5rem;
+            color: #777;
+            padding-top: 0.1vh;
+            margin-top: 0.1vh;
+           
+        }
+
+        
+
+}
 
 
 
-
-
+/*
 @media all and (max-width: 297px), and (max-height: 134px) {
 
     .nav ul {
@@ -209,7 +250,7 @@ html {
 
 }
 
-
+*/
 
 
 
@@ -228,6 +269,9 @@ html {
     
 }
 
+/*
+
+
 @media all and (max-height: 300px) {
     .nav a {
         padding-bottom: 0.8rem
@@ -239,7 +283,7 @@ html {
         padding-bottom: 0.5rem;
     }
 }
-
+*/
 .nav a:hover {
 font-weight: lighter;
 }
@@ -260,11 +304,7 @@ font-weight: lighter;
     margin: 15vh;
 }
 
-/*
-html {
-    background-color : red
-}
-*/
+
 
 
 
