--- a/tile.css
+++ b/tile.css
@@ -96,12 +96,60 @@
     }
 }
 
-/* WEB VERSION  WINDOW NARROW FROM RIGHT to LEFT */
+/* WEB VERSION  WINDOW NARROW FROM RIGHT to LEFT  1*/
 @media screen and (600px < width <= 1240px) and (height > 600px) {
 
     .tile-group {
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(12.36vw, 1fr));
+        grid-auto-rows: auto;
+        gap: 1vw;
+        font-family: sans-serif;
+        margin-bottom: 2vh;
+        margin-left: 0.1vw;
+        max-width: 50vw;
+        display: grid;
+        gap: 2vw;
+        padding-bottom: 48vh;
+        transform-origin: left top;
+        transform: scale(1.4);
+    
+    }
+
+    .flex-container {
+        display: flex;
+        flex-direction: column;
+        flex-direction: flex-start;
+        margin: 0 auto;
+        padding: 0vw 19.9vw;
+
+    }
+
+    .tile-group * {
+        box-sizing: border-box;
+    
+    
+    }
+    
+    
+    .tile-image {
+        max-width: 100%;
+        height: 18vh;
+        object-fit: cover;
+        display: block;
+    
+    }
+
+}
+
+
+/* WEB VERSION  WINDOW NARROW FROM RIGHT to LEFT 2 */
+@media screen and (600px < width <= 967px) and (height > 600px) {
+
+    
+    .tile-group {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(16.36vw, 1fr));
         grid-auto-rows: auto;
         gap: 1vw;
         font-family: sans-serif;
@@ -113,7 +161,7 @@
         padding-bottom: 48vh;
         transform-origin: left top;
         transform: scale(1.4);
-        background-color: rgb(0, 68, 216);
+    
     
     }
 
@@ -122,7 +170,7 @@
         flex-direction: column;
         flex-direction: flex-start;
         margin: 0 auto;
-        padding: 0vw 19.9vw;
+        padding: 0vw 25.9vw;
 
     }
 
