making demo site responsive right to left making window more narrow

--- a/style.css
+++ b/style.css
@@ -231,6 +231,15 @@ html {
 
 }
 
+@media screen and (600px < width <= 712px) and (height > 600px) {
+
+    .nav ul {
+        margin-left: 1.7vw;
+    }
+
+
+}
+
 
 
 /*
