making window smaller from right to left works well enough could add some more spacing to VJ demo header. I don't want to break mobile version though and it might get complicated

--- a/style.css
+++ b/style.css
@@ -240,6 +240,15 @@ html {
 
 }
 
+@media screen and (480px < width <= 600px) and (height > 600px) {
+
+
+    .nav ul {
+        margin-left: 2.9vw;
+    }
+
+}
+
 
 
 /*
