--- a/tile.css
+++ b/tile.css
@@ -343,6 +343,163 @@
 }
 
 
+/* WEB VERSION  WINDOW NARROW FROM TOP to BOTTOM 3 */
+@media screen and (449px <= width <= 979px) and (172px <= height <= 500px) {
+
+    .tile-group {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(14.36vw, 1fr));
+        grid-auto-rows: auto;
+        gap: 1vw;
+        font-family: sans-serif;
+        margin-bottom: 100vh;
+        margin-left: 0.1vw;
+        max-width: 75vw;
+        display: grid;
+        gap: 2vw;
+        padding-bottom: 48vh;
+        transform-origin: left top;
+        transform: scale(1.4);
+  
+    
+     
+        
+    
+    
+    }
+
+    .flex-container {
+        display: flex;
+        flex-direction: column;
+        flex-direction: flex-start;
+        margin: 0 auto;
+        padding: 0vw 32.9vw;
+
+    }
+
+    .tile-group * {
+        box-sizing: border-box;
+    
+    
+    }
+    
+    
+    .tile-image {
+        max-width: 100%;
+        height: 18vh;
+        object-fit: cover;
+        display: block;
+    
+    }
+
+
+}
+
+
+/* WEB VERSION  WINDOW NARROW FROM TOP to BOTTOM 2 */
+@media screen and (743px <= width <= 979px) and (172px <= height <= 500px) {
+
+    .tile-group {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(14.36vw, 1fr));
+        grid-auto-rows: auto;
+        gap: 1vw;
+        font-family: sans-serif;
+        margin-bottom: 100vh;
+        margin-left: 0.1vw;
+        max-width: 75vw;
+        display: grid;
+        gap: 2vw;
+        padding-bottom: 48vh;
+        transform-origin: left top;
+        transform: scale(1.4);
+  
+     
+        
+    
+    
+    }
+
+    .flex-container {
+        display: flex;
+        flex-direction: column;
+        flex-direction: flex-start;
+        margin: 0 auto;
+        padding: 0vw 26.9vw;
+
+    }
+
+    .tile-group * {
+        box-sizing: border-box;
+    
+    
+    }
+    
+    
+    .tile-image {
+        max-width: 100%;
+        height: 18vh;
+        object-fit: cover;
+        display: block;
+    
+    }
+
+
+}
+
+
+/* WEB VERSION  WINDOW NARROW FROM TOP to BOTTOM 4 */
+@media screen and (200px <= width <= 624px) and (172px <= height <= 500px) {
+
+    .tile-group {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(14.36vw, 1fr));
+        grid-auto-rows: auto;
+        gap: 1vw;
+        font-family: sans-serif;
+        margin-bottom: 100vh;
+        margin-left: 0.1vw;
+        max-width: 75vw;
+        display: grid;
+        gap: 2vw;
+        padding-bottom: 48vh;
+        transform-origin: left top;
+        transform: scale(1.4);
+      
+     
+        
+    
+    
+    }
+
+    .flex-container {
+        display: flex;
+        flex-direction: column;
+        flex-direction: flex-start;
+        margin: 0 auto;
+        padding: 0vw 45.9vw;
+
+    }
+
+    .tile-group * {
+        box-sizing: border-box;
+    
+    
+    }
+    
+    
+    .tile-image {
+        max-width: 100%;
+        height: 18vh;
+        object-fit: cover;
+        display: block;
+    
+    }
+
+
+}
+
+
 /* WEB VERSION  WINDOW NARROW FROM TOP to BOTTOM 2 MOST SHORT */
 @media screen and (449px <= width) and (height <= 171px) {
 
