--- a/style.css
+++ b/style.css
@@ -396,9 +396,19 @@ html {
         
             font-size: 2.5rem;
             color: #777;
-            padding-top: 58.1vh;
-            margin-top: 0.1vh;
+            padding-top: 1.1vh;
+            margin-top: 1.1vh;
+            margin-bottom: 5vh;
            
+        }
+
+        
+        .link_event_promo{
+            width: 5vw;
+            height: 3vh;
+            margin-top: 90vh;
+
+    
         }
 
         
@@ -504,7 +514,62 @@ html {
 
 }
 
+/* WEB VERSION  WINDOW NARROW FROM TOP to BOTTOM 5 */
+@media screen and (width <= 581px) and (height <= 280px) {
 
+    .nav ul {
+        margin: 0;
+        font-size: 1.6rem;
+        position: fixed;
+        max-width: 21%;
+        display: flex;
+        flex-direction: column;
+        margin-left: -1.8vw;
+        flex-wrap: wrap;
+        overflow-wrap: break-word;
+        margin-top: 7vh;
+    
+       
+    }
+    
+    
+        .overflow_box_hide{
+    
+            display:none;
+    
+        }
+    
+        .content-section{
+            margin-top: -1vh;
+            font-size: 2.5rem;
+            color: #777;
+        }
+        
+        .content-section1{
+        
+            font-size: 2.5rem;
+            color: #777;
+            padding-top: 2.1vh;
+            margin-top: 0.1vh;
+            min-height: 3vh;
+            padding-bottom: 5vh;
+           
+        }
+
+        .link_event_promo{
+            width: 5vw;
+            height: 3vh;
+            margin-top: 320vh;
+
+    
+        }
+           
+        
+        
+
+        
+
+}
 
 /* WEB VERSION  WINDOW NARROW FROM TOP to BOTTOM 2 MOST SHORT */
 @media screen and (449px <= width) and (height <= 171px) {
